--- a/src/Styles/SharedComponents/02.Navbar/Navbar.css
+++ b/src/Styles/SharedComponents/02.Navbar/Navbar.css
@@ -1,1 +1,4 @@
-/* No CSS *//*# sourceMappingURL=Navbar.css.map */
+.container {
+  background-color: blue;
+}
+/*# sourceMappingURL=Navbar.css.map */
