--- a/public/assets/Styles/SharedComponents/02.Navbar/Navbar.css
+++ b/public/assets/Styles/SharedComponents/02.Navbar/Navbar.css
@@ -1,4 +1,1 @@
-.container {
-  background-color: blue;
-}
-/*# sourceMappingURL=Navbar.css.map */
+/* No CSS *//*# sourceMappingURL=Navbar.css.map */
