--- a/public/assets/Styles/03.Login/Login.css
+++ b/public/assets/Styles/03.Login/Login.css
@@ -207,6 +207,13 @@
   color: white;
   border: none;
   margin-bottom: 5px;
+  cursor: pointer;
+  -webkit-transition: 0.1s ease-in;
+  transition: 0.1s ease-in;
+}
+
+.credentialsDiv .signInBtn:hover {
+  background-color: #1c9993;
 }
 
 .credentialsDiv .agreement {
@@ -241,6 +248,7 @@
 .credentialsDiv .noAccount :nth-child(2) {
   text-decoration: underline;
   margin-left: 5px;
+  cursor: pointer;
 }
 
 .rightsTextDiv {
