--- a/public/assets/Styles/00.Global/global.scss
+++ b/public/assets/Styles/00.Global/global.scss
@@ -1,2 +1,10 @@
-@import '../01.Homepage/Homepage.scss';
-@import '../03.Login/Login.scss';
+@import "../01.Homepage/Homepage.scss";
+@import "../03.Login/Login.scss";
+
+body,
+html {
+  padding: 0;
+  margin: 0;
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
