--- a/public/assets/Styles/03.Login/Login.css
+++ b/public/assets/Styles/03.Login/Login.css
@@ -1,25 +1,4 @@
 .loginContainer {
-  width: 100%;
-  height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  font-family: "Avenir";
-}
-
-.loginCenterDiv {
-  width: 700px;
-  height: 85vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -37,13 +16,64 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  width: 100%;
+  height: 100vh;
+}
+
+@media screen and (max-height: 723px) {
+  .loginContainer {
+    height: 100%;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .loginContainer {
+    width: 100vw;
+  }
+}
+
+.loginCenterDiv {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+}
+
+.loginMainDiv {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+  width: 700px;
+}
+
+@media screen and (max-width: 700px) {
+  .loginMainDiv {
+    width: 100vw;
+  }
 }
 
 .loginPageLogoDiv {
-  width: 85%;
-  height: 146px;
-  padding: 10px;
-  background-color: #20B2AA;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -58,6 +88,10 @@
       -ms-flex-direction: row;
           flex-direction: row;
   font-family: "Avenir";
+  width: 85%;
+  height: 146px;
+  padding: 10px;
+  background-color: #20b2aa;
 }
 
 .pinchLogo {
@@ -68,11 +102,10 @@
 }
 
 .credentialsDiv {
-  margin-top: -60px;
+  margin-top: 20px;
   width: 85%;
-  height: 550px;
   padding: 30px;
-  background-color: #D1E0DE;
+  background-color: #d1e0de;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -87,7 +120,7 @@
 
 .credentialsDiv .credentialsTitle {
   font-size: 40px;
-  color: #5D5D5D;
+  color: #5d5d5d;
 }
 
 .credentialsDiv .loginForm {
@@ -110,13 +143,19 @@
   margin-top: 70px;
 }
 
+@media screen and (max-height: 1000px) {
+  .credentialsDiv .loginForm {
+    margin-top: 10px;
+  }
+}
+
 .credentialsDiv .loginInputTitle {
   font-size: 20px;
   width: 75%;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  color: #5D5D5D;
+  color: #5d5d5d;
 }
 
 .credentialsDiv .loginInput {
@@ -170,7 +209,7 @@
       -ms-flex-pack: start;
           justify-content: flex-start;
   margin-bottom: 18px;
-  color: #5D5D5D;
+  color: #5d5d5d;
 }
 
 .credentialsDiv .rememberMeLabel {
@@ -203,7 +242,7 @@
   width: 75%;
   padding: 12px;
   font-size: 25px;
-  background-color: #20B2AA;
+  background-color: #20b2aa;
   color: white;
   border: none;
   margin-bottom: 5px;
@@ -221,14 +260,11 @@
   font-size: 12px;
   margin-bottom: 18px;
   text-align: center;
-  color: #5D5D5D;
+  color: #5d5d5d;
   font-style: italic;
 }
 
 .credentialsDiv .noAccount {
-  width: 70%;
-  font-size: 25px;
-  color: #5f5f5f;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -243,6 +279,9 @@
       -ms-flex-direction: row;
           flex-direction: row;
   font-family: "Avenir";
+  width: 70%;
+  font-size: 25px;
+  color: #5f5f5f;
 }
 
 .credentialsDiv .noAccount :nth-child(2) {
@@ -252,7 +291,6 @@
 }
 
 .rightsTextDiv {
-  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -267,12 +305,15 @@
       -ms-flex-direction: column;
           flex-direction: column;
   font-family: "Avenir";
-  margin-bottom: -50px;
+  width: 100%;
+  position: relative;
+  bottom: 0;
+  margin-bottom: 20px;
 }
 
 .rightsText {
   font-size: 15px;
   text-align: center;
-  color: #5D5D5D;
+  color: #5d5d5d;
 }
 /*# sourceMappingURL=Login.css.map */
