--- a/public/assets/Styles/03.Login/Login.scss
+++ b/public/assets/Styles/03.Login/Login.scss
@@ -1,3 +1,5 @@
+$phone: 450px;
+
 @mixin flexCenter($direction) {
   display: flex;
   justify-content: center;
@@ -7,26 +9,39 @@
 }
 
 .loginContainer {
+  @include flexCenter(column);
+  justify-content: space-between;
   width: 100%;
   height: 100vh;
-  @include flexCenter(column);
+  @media screen and (max-height: 723px) {
+    height: 100%;
+  }
+  @media screen and (max-width: $phone) {
+    width: 100vw;
+  }
+  // border: 1px solid red;
 }
 
 .loginCenterDiv {
-  width: 700px;
-  height: 85vh;
-  // border: 1px solid red;
   @include flexCenter(column);
-  justify-content: space-between;
+  // border: 1px solid red;
+}
+
+.loginMainDiv {
+  @include flexCenter(column);
+  width: 700px;
+  @media screen and (max-width: 700px) {
+    width: 100vw;
+  }
 }
 
 .loginPageLogoDiv {
+  @include flexCenter(row);
   width: 85%;
   height: 146px;
   padding: 10px;
-  background-color: #20B2AA;
+  background-color: #20b2aa;
   // border: 1px solid red;
-  @include flexCenter(row);
 }
 
 .pinchLogo {
@@ -37,30 +52,32 @@
 }
 
 .credentialsDiv {
-  margin-top: -60px;
+  margin-top: 20px;
   width: 85%;
-  height: 550px;
   padding: 30px;
   // border: 1px solid red;
-  background-color: #D1E0DE;
+  background-color: #d1e0de;
   display: flex;
   flex-direction: column;
   align-items: center;
   .credentialsTitle {
-    font-size:40px;
-    color: #5D5D5D;
+    font-size: 40px;
+    color: #5d5d5d;
   }
   .loginForm {
     @include flexCenter(column);
     width: 100%;
     position: relative;
     margin-top: 70px;
+    @media screen and (max-height: 1000px) {
+      margin-top: 10px;
+    }
   }
   .loginInputTitle {
     font-size: 20px;
     width: 75%;
     justify-content: flex-start;
-    color: #5D5D5D;
+    color: #5d5d5d;
   }
   .loginInput {
     width: 75%;
@@ -69,44 +86,46 @@
     margin-bottom: 18px;
     border: none;
     font-size: 20px;
-    &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    &::-webkit-input-placeholder {
+      /* Chrome/Opera/Safari */
       position: relative;
       font-size: 20px;
       font-style: italic;
-      color:rgb(156, 156, 156);
+      color: rgb(156, 156, 156);
       font-weight: lighter;
     }
-    &::-moz-placeholder { /* Firefox 19+ */
-      position: relative;
-      font-size: 20px;
-      font-style: italic;
-      font-weight: lighter;
-      color:rgb(156, 156, 156);
-    }
-    &:-ms-input-placeholder { /* IE 10+ */
+    &::-moz-placeholder {
+      /* Firefox 19+ */
       position: relative;
       font-size: 20px;
       font-style: italic;
       font-weight: lighter;
-      color:rgb(156, 156, 156);
+      color: rgb(156, 156, 156);
     }
-    &:-moz-placeholder { /* Firefox 18- */
+    &:-ms-input-placeholder {
+      /* IE 10+ */
       position: relative;
       font-size: 20px;
       font-style: italic;
-      color:rgb(156, 156, 156);
+      font-weight: lighter;
+      color: rgb(156, 156, 156);
+    }
+    &:-moz-placeholder {
+      /* Firefox 18- */
+      position: relative;
+      font-size: 20px;
+      font-style: italic;
+      color: rgb(156, 156, 156);
       font-weight: lighter;
     }
-
   }
   .rememberMe {
     width: 75%;
     justify-content: flex-start;
     margin-bottom: 18px;
-    color: #5D5D5D;
+    color: #5d5d5d;
   }
   .rememberMeLabel {
-    // margin-bottom: 0;
     @include flexCenter(row);
     justify-content: start;
   }
@@ -119,13 +138,13 @@
     width: 75%;
     padding: 12px;
     font-size: 25px;
-    background-color: #20B2AA;
+    background-color: #20b2aa;
     color: white;
     border: none;
     margin-bottom: 5px;
     cursor: pointer;
     transition: 0.1s ease-in;
-    &:hover{
+    &:hover {
       background-color: #1c9993;
     }
   }
@@ -134,31 +153,33 @@
     font-size: 12px;
     margin-bottom: 18px;
     text-align: center;
-    color: #5D5D5D;
+    color: #5d5d5d;
     font-style: italic;
   }
   .noAccount {
-      width: 70%;
-      font-size: 25px;
-      color: rgb(95, 95, 95);
-      @include flexCenter(row);
-      :nth-child(2) {
-        text-decoration: underline;
-        margin-left: 5px;
-        cursor: pointer;
-      }
+    @include flexCenter(row);
+    width: 70%;
+    font-size: 25px;
+    color: rgb(95, 95, 95);
+    :nth-child(2) {
+      text-decoration: underline;
+      margin-left: 5px;
+      cursor: pointer;
+    }
   }
 }
 
-.rightsTextDiv{
+.rightsTextDiv {
+  @include flexCenter(column);
   width: 100%;
   // border: 1px solid red;
-  @include flexCenter(column);
-  margin-bottom: -50px;
+  position: relative;
+  bottom: 0;
+  margin-bottom: 20px;
 }
 
 .rightsText {
   font-size: 15px;
   text-align: center;
-  color: #5D5D5D;
+  color: #5d5d5d;
 }
