--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -20,7 +20,7 @@ img {
   height: 100px;
 }
 
-.loginContainer {
+.login-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -43,18 +43,18 @@ img {
 }
 
 @media screen and (max-height: 723px) {
-  .loginContainer {
+  .login-container {
     height: 100%;
   }
 }
 
 @media screen and (max-width: 450px) {
-  .loginContainer {
+  .login-container {
     width: 100vw;
   }
 }
 
-.loginCenterDiv {
+.login-center-div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -71,7 +71,7 @@ img {
   font-family: "Avenir";
 }
 
-.loginMainDiv {
+.login-main-div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -90,12 +90,12 @@ img {
 }
 
 @media screen and (max-width: 700px) {
-  .loginMainDiv {
+  .login-main-div {
     width: 100vw;
   }
 }
 
-.loginPageLogoDiv {
+.login-page-logo-div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -116,14 +116,14 @@ img {
   background-color: #20b2aa;
 }
 
-.pinchLogo {
+.pinch-logo {
   width: 70%;
   height: 100%;
   -o-object-fit: contain;
      object-fit: contain;
 }
 
-.credentialsDiv {
+.credentials-div {
   margin-top: 20px;
   width: 85%;
   padding: 30px;
@@ -140,12 +140,12 @@ img {
           align-items: center;
 }
 
-.credentialsDiv .credentialsTitle {
+.credentials-div .credentialsTitle {
   font-size: 40px;
   color: #5d5d5d;
 }
 
-.credentialsDiv .loginForm {
+.credentials-div .login-form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -166,12 +166,12 @@ img {
 }
 
 @media screen and (max-height: 1000px) {
-  .credentialsDiv .loginForm {
+  .credentials-div .login-form {
     margin-top: 10px;
   }
 }
 
-.credentialsDiv .loginInputTitle {
+.credentials-div .login-input-title {
   font-size: 20px;
   width: 75%;
   -webkit-box-pack: start;
@@ -180,7 +180,7 @@ img {
   color: #5d5d5d;
 }
 
-.credentialsDiv .loginInput {
+.credentials-div .login-input {
   width: 75%;
   height: 45px;
   padding-left: 10px;
@@ -189,7 +189,7 @@ img {
   font-size: 20px;
 }
 
-.credentialsDiv .loginInput::-webkit-input-placeholder {
+.credentials-div .login-input::-webkit-input-placeholder {
   /* Chrome/Opera/Safari */
   position: relative;
   font-size: 20px;
@@ -198,7 +198,7 @@ img {
   font-weight: lighter;
 }
 
-.credentialsDiv .loginInput::-moz-placeholder {
+.credentials-div .login-input::-moz-placeholder {
   /* Firefox 19+ */
   position: relative;
   font-size: 20px;
@@ -207,7 +207,7 @@ img {
   color: #9c9c9c;
 }
 
-.credentialsDiv .loginInput:-ms-input-placeholder {
+.credentials-div .login-input:-ms-input-placeholder {
   /* IE 10+ */
   position: relative;
   font-size: 20px;
@@ -216,7 +216,7 @@ img {
   color: #9c9c9c;
 }
 
-.credentialsDiv .loginInput:-moz-placeholder {
+.credentials-div .login-input:-moz-placeholder {
   /* Firefox 18- */
   position: relative;
   font-size: 20px;
@@ -225,7 +225,7 @@ img {
   font-weight: lighter;
 }
 
-.credentialsDiv .rememberMe {
+.credentials-div .remember-me {
   width: 75%;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
@@ -234,7 +234,7 @@ img {
   color: #5d5d5d;
 }
 
-.credentialsDiv .rememberMeLabel {
+.credentials-div .remember-me-label {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -254,13 +254,13 @@ img {
           justify-content: start;
 }
 
-.credentialsDiv .rememberMeChk {
+.credentials-div .remember-me-chk {
   margin-right: 8px;
   width: 22px;
   height: 22px;
 }
 
-.credentialsDiv .signInBtn {
+.credentials-div .sign-in-btn {
   width: 75%;
   padding: 12px;
   font-size: 25px;
@@ -273,11 +273,11 @@ img {
   transition: 0.1s ease-in;
 }
 
-.credentialsDiv .signInBtn:hover {
+.credentials-div .sign-in-btn:hover {
   background-color: #1c9993;
 }
 
-.credentialsDiv .agreement {
+.credentials-div .agreement {
   width: 60%;
   font-size: 12px;
   margin-bottom: 18px;
@@ -286,7 +286,7 @@ img {
   font-style: italic;
 }
 
-.credentialsDiv .noAccount {
+.credentials-div .no-account {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -306,13 +306,13 @@ img {
   color: #5f5f5f;
 }
 
-.credentialsDiv .noAccount :nth-child(2) {
+.credentials-div .no-account :nth-child(2) {
   text-decoration: underline;
   margin-left: 5px;
   cursor: pointer;
 }
 
-.rightsTextDiv {
+.rights-text-div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -333,7 +333,7 @@ img {
   margin-bottom: 20px;
 }
 
-.rightsText {
+.rights-text {
   font-size: 15px;
   text-align: center;
   color: #5d5d5d;
