--- a/public/assets/Styles/03.Login/Login.css
+++ b/public/assets/Styles/03.Login/Login.css
@@ -1,4 +1,4 @@
-.loginContainer {
+.login-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -21,18 +21,18 @@
 }
 
 @media screen and (max-height: 723px) {
-  .loginContainer {
+  .login-container {
     height: 100%;
   }
 }
 
 @media screen and (max-width: 450px) {
-  .loginContainer {
+  .login-container {
     width: 100vw;
   }
 }
 
-.loginCenterDiv {
+.login-center-div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -49,7 +49,7 @@
   font-family: "Avenir";
 }
 
-.loginMainDiv {
+.login-main-div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -68,12 +68,12 @@
 }
 
 @media screen and (max-width: 700px) {
-  .loginMainDiv {
+  .login-main-div {
     width: 100vw;
   }
 }
 
-.loginPageLogoDiv {
+.login-page-logo-div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -94,14 +94,14 @@
   background-color: #20b2aa;
 }
 
-.pinchLogo {
+.pinch-logo {
   width: 70%;
   height: 100%;
   -o-object-fit: contain;
      object-fit: contain;
 }
 
-.credentialsDiv {
+.credentials-div {
   margin-top: 20px;
   width: 85%;
   padding: 30px;
@@ -118,12 +118,12 @@
           align-items: center;
 }
 
-.credentialsDiv .credentialsTitle {
+.credentials-div .credentialsTitle {
   font-size: 40px;
   color: #5d5d5d;
 }
 
-.credentialsDiv .loginForm {
+.credentials-div .login-form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -144,12 +144,12 @@
 }
 
 @media screen and (max-height: 1000px) {
-  .credentialsDiv .loginForm {
+  .credentials-div .login-form {
     margin-top: 10px;
   }
 }
 
-.credentialsDiv .loginInputTitle {
+.credentials-div .login-input-title {
   font-size: 20px;
   width: 75%;
   -webkit-box-pack: start;
@@ -158,7 +158,7 @@
   color: #5d5d5d;
 }
 
-.credentialsDiv .loginInput {
+.credentials-div .login-input {
   width: 75%;
   height: 45px;
   padding-left: 10px;
@@ -167,7 +167,7 @@
   font-size: 20px;
 }
 
-.credentialsDiv .loginInput::-webkit-input-placeholder {
+.credentials-div .login-input::-webkit-input-placeholder {
   /* Chrome/Opera/Safari */
   position: relative;
   font-size: 20px;
@@ -176,7 +176,7 @@
   font-weight: lighter;
 }
 
-.credentialsDiv .loginInput::-moz-placeholder {
+.credentials-div .login-input::-moz-placeholder {
   /* Firefox 19+ */
   position: relative;
   font-size: 20px;
@@ -185,7 +185,7 @@
   color: #9c9c9c;
 }
 
-.credentialsDiv .loginInput:-ms-input-placeholder {
+.credentials-div .login-input:-ms-input-placeholder {
   /* IE 10+ */
   position: relative;
   font-size: 20px;
@@ -194,7 +194,7 @@
   color: #9c9c9c;
 }
 
-.credentialsDiv .loginInput:-moz-placeholder {
+.credentials-div .login-input:-moz-placeholder {
   /* Firefox 18- */
   position: relative;
   font-size: 20px;
@@ -203,7 +203,7 @@
   font-weight: lighter;
 }
 
-.credentialsDiv .rememberMe {
+.credentials-div .remember-me {
   width: 75%;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
@@ -212,7 +212,7 @@
   color: #5d5d5d;
 }
 
-.credentialsDiv .rememberMeLabel {
+.credentials-div .remember-me-label {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -232,13 +232,13 @@
           justify-content: start;
 }
 
-.credentialsDiv .rememberMeChk {
+.credentials-div .remember-me-chk {
   margin-right: 8px;
   width: 22px;
   height: 22px;
 }
 
-.credentialsDiv .signInBtn {
+.credentials-div .sign-in-btn {
   width: 75%;
   padding: 12px;
   font-size: 25px;
@@ -251,11 +251,11 @@
   transition: 0.1s ease-in;
 }
 
-.credentialsDiv .signInBtn:hover {
+.credentials-div .sign-in-btn:hover {
   background-color: #1c9993;
 }
 
-.credentialsDiv .agreement {
+.credentials-div .agreement {
   width: 60%;
   font-size: 12px;
   margin-bottom: 18px;
@@ -264,7 +264,7 @@
   font-style: italic;
 }
 
-.credentialsDiv .noAccount {
+.credentials-div .no-account {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -284,13 +284,13 @@
   color: #5f5f5f;
 }
 
-.credentialsDiv .noAccount :nth-child(2) {
+.credentials-div .no-account :nth-child(2) {
   text-decoration: underline;
   margin-left: 5px;
   cursor: pointer;
 }
 
-.rightsTextDiv {
+.rights-text-div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -311,7 +311,7 @@
   margin-bottom: 20px;
 }
 
-.rightsText {
+.rights-text {
   font-size: 15px;
   text-align: center;
   color: #5d5d5d;
