--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -140,7 +140,7 @@ img {
           align-items: center;
 }
 
-.credentials-div .credentialsTitle {
+.credentials-div .credentials-title {
   font-size: 40px;
   color: #5d5d5d;
 }
