--- a/public/assets/Styles/03.Login/Login.css
+++ b/public/assets/Styles/03.Login/Login.css
@@ -118,7 +118,7 @@
           align-items: center;
 }
 
-.credentials-div .credentialsTitle {
+.credentials-div .credentials-title {
   font-size: 40px;
   color: #5d5d5d;
 }
