--- a/public/assets/Styles/03.Login/Login.scss
+++ b/public/assets/Styles/03.Login/Login.scss
@@ -60,7 +60,7 @@ $phone: 450px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  .credentialsTitle {
+  .credentials-title {
     font-size: 40px;
     color: #5d5d5d;
   }
