--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -89,7 +89,7 @@ img {
   width: 700px;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 600px) {
   .login-main-div {
     width: 100vw;
   }
@@ -116,6 +116,12 @@ img {
   background-color: #20b2aa;
 }
 
+@media screen and (max-width: 600px) {
+  .login-page-logo-div {
+    width: 100%;
+  }
+}
+
 .pinch-logo {
   width: 70%;
   height: 100%;
@@ -138,6 +144,18 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media screen and (max-width: 600px) {
+  .credentials-div {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .credentials-div {
+    padding: 30px 0 30px 0;
+  }
 }
 
 .credentials-div .credentials-title {
@@ -189,6 +207,12 @@ img {
   font-size: 20px;
 }
 
+@media screen and (max-width: 400px) {
+  .credentials-div .login-input {
+    width: 95%;
+  }
+}
+
 .credentials-div .login-input::-webkit-input-placeholder {
   /* Chrome/Opera/Safari */
   position: relative;
@@ -234,6 +258,12 @@ img {
   color: #5d5d5d;
 }
 
+@media screen and (max-width: 400px) {
+  .credentials-div .remember-me {
+    width: 95%;
+  }
+}
+
 .credentials-div .remember-me-label {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -273,6 +303,12 @@ img {
   transition: 0.1s ease-in;
 }
 
+@media screen and (max-width: 400px) {
+  .credentials-div .sign-in-btn {
+    width: 95%;
+  }
+}
+
 .credentials-div .sign-in-btn:hover {
   background-color: #1c9993;
 }
@@ -284,6 +320,12 @@ img {
   text-align: center;
   color: #5d5d5d;
   font-style: italic;
+}
+
+@media screen and (max-width: 400px) {
+  .credentials-div .agreement {
+    width: 80%;
+  }
 }
 
 .credentials-div .no-account {
@@ -304,10 +346,16 @@ img {
   width: 70%;
   font-size: 25px;
   color: #5f5f5f;
+  text-align: center;
 }
 
-.credentials-div .no-account :nth-child(2) {
-  text-decoration: underline;
+@media screen and (max-width: 600px) {
+  .credentials-div .no-account {
+    width: 95%;
+  }
+}
+
+.credentials-div .sign-up-link {
   margin-left: 5px;
   cursor: pointer;
 }
