--- a/public/assets/Styles/03.Login/Login.scss
+++ b/public/assets/Styles/03.Login/Login.scss
@@ -30,7 +30,7 @@ $phone: 450px;
 .login-main-div {
   @include flexCenter(column);
   width: 700px;
-  @media screen and (max-width: 700px) {
+  @media screen and (max-width: 600px) {
     width: 100vw;
   }
 }
@@ -42,6 +42,9 @@ $phone: 450px;
   padding: 10px;
   background-color: #20b2aa;
   // border: 1px solid red;
+  @media screen and (max-width: 600px) {
+    width: 100%;
+  }
 }
 
 .pinch-logo {
@@ -60,6 +63,12 @@ $phone: 450px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  @media screen and (max-width: 600px) {
+    width: 100%;
+  }
+  @media screen and (max-width: 400px) {
+    padding: 30px 0 30px 0;
+  }
   .credentials-title {
     font-size: 40px;
     color: #5d5d5d;
@@ -86,6 +95,9 @@ $phone: 450px;
     margin-bottom: 18px;
     border: none;
     font-size: 20px;
+    @media screen and (max-width: 400px) {
+      width: 95%;
+    }
     &::-webkit-input-placeholder {
       /* Chrome/Opera/Safari */
       position: relative;
@@ -124,6 +136,9 @@ $phone: 450px;
     justify-content: flex-start;
     margin-bottom: 18px;
     color: #5d5d5d;
+    @media screen and (max-width: 400px) {
+      width: 95%;
+    }
   }
   .remember-me-label {
     // margin-bottom: 0;
@@ -145,6 +160,9 @@ $phone: 450px;
     margin-bottom: 5px;
     cursor: pointer;
     transition: 0.1s ease-in;
+    @media screen and (max-width: 400px) {
+      width: 95%;
+    }
     &:hover {
       background-color: #1c9993;
     }
@@ -156,17 +174,28 @@ $phone: 450px;
     text-align: center;
     color: #5d5d5d;
     font-style: italic;
+    @media screen and (max-width: 400px) {
+      width: 80%;
+    }
   }
   .no-account {
     @include flexCenter(row);
     width: 70%;
     font-size: 25px;
     color: rgb(95, 95, 95);
-    :nth-child(2) {
-      text-decoration: underline;
-      margin-left: 5px;
-      cursor: pointer;
+    @media screen and (max-width: 600px) {
+      width: 95%;
     }
+    text-align: center;
+    // :nth-child(2) {
+    //   text-decoration: underline;
+    //   margin-left: 5px;
+    //   cursor: pointer;
+    // }
+  }
+  .sign-up-link {
+    margin-left: 5px;
+    cursor: pointer;
   }
 }
 
