--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -20,11 +20,7 @@ img {
   height: 100px;
 }
 
-<<<<<<< HEAD
-.login-container {
-=======
 .signUp-container {
->>>>>>> 5280e39c3a6d038b9472a419f627d4b2accfe0e2
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -47,30 +43,18 @@ img {
 }
 
 @media screen and (max-height: 723px) {
-<<<<<<< HEAD
-  .login-container {
-=======
   .signUp-container {
->>>>>>> 5280e39c3a6d038b9472a419f627d4b2accfe0e2
     height: 100%;
   }
 }
 
 @media screen and (max-width: 450px) {
-<<<<<<< HEAD
-  .login-container {
-=======
   .signUp-container {
->>>>>>> 5280e39c3a6d038b9472a419f627d4b2accfe0e2
     width: 100vw;
   }
 }
 
-<<<<<<< HEAD
-.login-center-div {
-=======
 .signUp-center-div {
->>>>>>> 5280e39c3a6d038b9472a419f627d4b2accfe0e2
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -87,9 +71,6 @@ img {
   font-family: "Avenir";
 }
 
-<<<<<<< HEAD
-.login-main-div {
-=======
 .signUp-main-div {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -572,7 +553,6 @@ img {
 }
 
 .login-container {
->>>>>>> 5280e39c3a6d038b9472a419f627d4b2accfe0e2
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -587,28 +567,37 @@ img {
       -ms-flex-direction: column;
           flex-direction: column;
   font-family: "Avenir";
-<<<<<<< HEAD
-  width: 700px;
-}
-
-@media screen and (max-width: 600px) {
-=======
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  align-items: center;
   width: 100%;
   height: 100vh;
+  background-color: white;
 }
 
-@media screen and (max-height: 723px) {
+@media screen and (max-width: 600px) {
   .login-container {
-    height: 100%;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    background-color: #d1e0de;
   }
 }
 
 @media screen and (max-width: 450px) {
   .login-container {
     width: 100vw;
+  }
+}
+
+.empty-div {
+  display: block;
+}
+
+@media screen and (max-width: 600px) {
+  .empty-div {
+    display: none;
   }
 }
 
@@ -648,7 +637,6 @@ img {
 }
 
 @media screen and (max-width: 700px) {
->>>>>>> 5280e39c3a6d038b9472a419f627d4b2accfe0e2
   .login-main-div {
     width: 100vw;
   }
@@ -673,15 +661,12 @@ img {
   height: 146px;
   padding: 10px;
   background-color: #20b2aa;
-<<<<<<< HEAD
 }
 
 @media screen and (max-width: 600px) {
   .login-page-logo-div {
     width: 100%;
   }
-=======
->>>>>>> 5280e39c3a6d038b9472a419f627d4b2accfe0e2
 }
 
 .pinch-logo {
@@ -708,21 +693,25 @@ img {
           align-items: center;
 }
 
-<<<<<<< HEAD
-@media screen and (max-width: 600px) {
+@media screen and (max-height: 723px) {
   .credentials-div {
-    width: 100%;
+    margin-top: 0;
   }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
+  .credentials-div {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
   .credentials-div {
     padding: 30px 0 30px 0;
   }
 }
 
-=======
->>>>>>> 5280e39c3a6d038b9472a419f627d4b2accfe0e2
 .credentials-div .credentials-title {
   font-size: 40px;
   color: #5d5d5d;
@@ -763,6 +752,12 @@ img {
   color: #5d5d5d;
 }
 
+@media screen and (max-width: 600px) {
+  .credentials-div .login-input-title {
+    width: 90%;
+  }
+}
+
 .credentials-div .login-input {
   width: 75%;
   height: 45px;
@@ -772,15 +767,12 @@ img {
   font-size: 20px;
 }
 
-<<<<<<< HEAD
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
   .credentials-div .login-input {
-    width: 95%;
+    width: 90%;
   }
 }
 
-=======
->>>>>>> 5280e39c3a6d038b9472a419f627d4b2accfe0e2
 .credentials-div .login-input::-webkit-input-placeholder {
   /* Chrome/Opera/Safari */
   position: relative;
@@ -826,15 +818,12 @@ img {
   color: #5d5d5d;
 }
 
-<<<<<<< HEAD
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
   .credentials-div .remember-me {
-    width: 95%;
+    width: 90%;
   }
 }
 
-=======
->>>>>>> 5280e39c3a6d038b9472a419f627d4b2accfe0e2
 .credentials-div .remember-me-label {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -874,15 +863,14 @@ img {
   transition: 0.1s ease-in;
 }
 
-<<<<<<< HEAD
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
   .credentials-div .sign-in-btn {
-    width: 95%;
+    -webkit-transition: none;
+    transition: none;
+    width: 90%;
   }
 }
 
-=======
->>>>>>> 5280e39c3a6d038b9472a419f627d4b2accfe0e2
 .credentials-div .sign-in-btn:hover {
   background-color: #1c9993;
 }
@@ -896,15 +884,12 @@ img {
   font-style: italic;
 }
 
-<<<<<<< HEAD
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
   .credentials-div .agreement {
     width: 80%;
   }
 }
 
-=======
->>>>>>> 5280e39c3a6d038b9472a419f627d4b2accfe0e2
 .credentials-div .no-account {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -923,23 +908,16 @@ img {
   width: 70%;
   font-size: 25px;
   color: #5f5f5f;
-<<<<<<< HEAD
   text-align: center;
 }
 
 @media screen and (max-width: 600px) {
   .credentials-div .no-account {
-    width: 95%;
+    width: 90%;
   }
 }
 
-.credentials-div .sign-up-link {
-=======
-}
-
-.credentials-div .no-account :nth-child(2) {
-  text-decoration: underline;
->>>>>>> 5280e39c3a6d038b9472a419f627d4b2accfe0e2
+.credentials-div .signup-link {
   margin-left: 5px;
   cursor: pointer;
 }
@@ -965,12 +943,16 @@ img {
   margin-bottom: 20px;
 }
 
+@media screen and (max-width: 600px) {
+  .rights-text-div {
+    width: 90%;
+    padding-top: 30px;
+    border-top: 0.5px solid white;
+  }
+}
+
 .rights-text {
-<<<<<<< HEAD
-  font-size: 15px;
-=======
   font-size: 13px;
->>>>>>> 5280e39c3a6d038b9472a419f627d4b2accfe0e2
   text-align: center;
   color: #5d5d5d;
 }
@@ -983,7 +965,5 @@ body,
 html {
   padding: 0;
   margin: 0;
-  overflow-y: hidden;
-  overflow-x: hidden;
 }
 /*# sourceMappingURL=global.css.map */
