--- a/public/assets/Styles/03.Login/Login.css
+++ b/public/assets/Styles/03.Login/Login.css
@@ -16,19 +16,34 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  align-items: center;
   width: 100%;
   height: 100vh;
+  background-color: white;
 }
 
-@media screen and (max-height: 723px) {
+@media screen and (max-width: 600px) {
   .login-container {
-    height: 100%;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    background-color: #d1e0de;
   }
 }
 
 @media screen and (max-width: 450px) {
   .login-container {
     width: 100vw;
+  }
+}
+
+.empty-div {
+  display: block;
+}
+
+@media screen and (max-width: 600px) {
+  .empty-div {
+    display: none;
   }
 }
 
@@ -67,7 +82,7 @@
   width: 700px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
   .login-main-div {
     width: 100vw;
   }
@@ -124,13 +139,20 @@
           align-items: center;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-height: 723px) {
   .credentials-div {
-    width: 100%;
+    margin-top: 0;
   }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
+  .credentials-div {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
   .credentials-div {
     padding: 30px 0 30px 0;
   }
@@ -176,6 +198,12 @@
   color: #5d5d5d;
 }
 
+@media screen and (max-width: 600px) {
+  .credentials-div .login-input-title {
+    width: 90%;
+  }
+}
+
 .credentials-div .login-input {
   width: 75%;
   height: 45px;
@@ -185,9 +213,9 @@
   font-size: 20px;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
   .credentials-div .login-input {
-    width: 95%;
+    width: 90%;
   }
 }
 
@@ -236,9 +264,9 @@
   color: #5d5d5d;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
   .credentials-div .remember-me {
-    width: 95%;
+    width: 90%;
   }
 }
 
@@ -281,9 +309,11 @@
   transition: 0.1s ease-in;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
   .credentials-div .sign-in-btn {
-    width: 95%;
+    -webkit-transition: none;
+    transition: none;
+    width: 90%;
   }
 }
 
@@ -300,7 +330,7 @@
   font-style: italic;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
   .credentials-div .agreement {
     width: 80%;
   }
@@ -329,7 +359,7 @@
 
 @media screen and (max-width: 600px) {
   .credentials-div .no-account {
-    width: 95%;
+    width: 90%;
   }
 }
 
@@ -357,6 +387,14 @@
   position: relative;
   bottom: 0;
   margin-bottom: 20px;
+}
+
+@media screen and (max-width: 600px) {
+  .rights-text-div {
+    width: 90%;
+    padding-top: 30px;
+    border-top: 0.5px solid white;
+  }
 }
 
 .rights-text {
