--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -293,6 +293,13 @@ img {
   background: #fcc8c8;
 }
 
+.signup-credentials-div .input-container[data-error] .form-control {
+  border-color: #da5560;
+  border: 1px solid;
+  color: #da5560;
+  background: #fcc8c8;
+}
+
 .signup-credentials-div .input-container[data-error]::after {
   content: attr(data-error);
   font-size: 15px;
@@ -456,12 +463,12 @@ img {
 }
 
 .react-tel-input {
-  width: 75%;
+  width: 100%;
 }
 
 @media screen and (max-width: 600px) {
   .react-tel-input {
-    width: 90%;
+    width: 100%;
   }
 }
 
