--- a/public/assets/Styles/00.Global/global.scss
+++ b/public/assets/Styles/00.Global/global.scss
@@ -1,5 +1,6 @@
 @import "../01.Homepage/Homepage.scss";
 @import "../02.Signup/Signup.scss";
+@import "../02.Signup/password-modal/password.scss";
 @import "../03.Login/Login.scss";
 @import "../SharedComponents/01.Header/Header.scss";
 
