styling for password checker modal

--- a/public/assets/Styles/02.Signup/password-modal/password.css
+++ b/public/assets/Styles/02.Signup/password-modal/password.css
@@ -23,17 +23,24 @@
   right: 270px;
 }
 
+@media screen and (max-width: 2000px) {
+  .password-modal-container {
+    top: 420px;
+    right: 400px;
+  }
+}
+
 @media screen and (max-width: 1400px) {
   .password-modal-container {
     top: 420px;
-    right: 230px;
+    right: 250px;
   }
 }
 
 @media screen and (max-width: 1350px) {
   .password-modal-container {
     top: 420px;
-    right: 200px;
+    right: 230px;
   }
 }
 
