--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -710,17 +710,24 @@ img {
   right: 270px;
 }
 
+@media screen and (max-width: 2000px) {
+  .password-modal-container {
+    top: 420px;
+    right: 400px;
+  }
+}
+
 @media screen and (max-width: 1400px) {
   .password-modal-container {
     top: 420px;
-    right: 230px;
+    right: 250px;
   }
 }
 
 @media screen and (max-width: 1350px) {
   .password-modal-container {
     top: 420px;
-    right: 200px;
+    right: 230px;
   }
 }
 
