--- a/public/assets/Styles/02.Signup/password-modal/password.scss
+++ b/public/assets/Styles/02.Signup/password-modal/password.scss
@@ -17,13 +17,17 @@
   box-shadow: 6px 7px 14px -2px rgb(161, 161, 161);
   top: 420px;
   right: 270px;
+  @media screen and (max-width: 2000px) {
+    top: 420px;
+    right: 400px;
+  }
   @media screen and (max-width: 1400px) {
     top: 420px;
-    right: 230px;
+    right: 250px;
   }
   @media screen and (max-width: 1350px) {
     top: 420px;
-    right: 200px;
+    right: 230px;
   }
   @media screen and (max-width: 1300px) {
     top: 420px;
