Styled Header & navbar to match mock up

--- a/public/assets/Styles/00.Global/global.scss
+++ b/public/assets/Styles/00.Global/global.scss
@@ -5,6 +5,8 @@
 @import "../03.Login/Login.scss";
 @import "../SharedComponents/01.Header/Header.scss";
 @import "../SharedComponents/03.Footer/Footer.scss";
+@import "../SharedComponents/02.Navbar/Navbar.scss";
+
 
 body,
 html {
