--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -1478,7 +1478,7 @@
 }
 
 .additional-info-credentials-div .signin-additional-info-btn {
-  width: 75%;
+  width: 50%;
   padding: 12px;
   font-size: 25px;
   font-weight: lighter;
@@ -1936,13 +1936,94 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 120px;
+  height: 110px;
+  font-family: "Avenir";
+}
+
+@media screen and (max-width: 1000px) {
+  .header {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .header {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    font-family: "Avenir";
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .header {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    font-family: "Avenir";
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    align-items: center;
+  }
+}
+
+.header .header-image {
+  width: 60%;
+  padding: 1em;
+}
+
+@media screen and (max-width: 1000px) {
+  .header .header-image {
+    width: 40%;
+    padding: 0.5em;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .header .header-image {
+    width: 30%;
+    padding: 0;
+  }
 }
 
 .header .header-logo {
   margin-left: 10px;
   width: 210px;
-  height: 100px;
+  height: 90px;
+}
+
+@media screen and (max-width: 560px) {
+  .header .header-logo {
+    width: 100px;
+    height: 45px;
+  }
 }
 
 .header .header-contents {
@@ -1953,19 +2034,82 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  width: 300px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 25%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-right: 10px;
+  margin-right: 30px;
+}
+
+@media screen and (max-width: 1000px) {
+  .header .header-contents {
+    width: 35%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .header .header-contents {
+    width: 45%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .header .header-contents {
+    width: 55%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .header .header-contents {
+    width: 65%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .header .header-contents {
+    width: 80%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    margin-right: 0;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .header .header-contents {
+    width: 90%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    margin-right: 0;
+  }
 }
 
 .header .header-contents .link {
   color: #FFFFFF;
   text-decoration: none;
   font-size: 1.2em;
+  -webkit-transition: 0.1s ease-in;
+  transition: 0.1s ease-in;
+}
+
+.header .header-contents .link:hover {
+  color: #117973;
 }
 
 .footer {
@@ -2008,6 +2152,170 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.navbar-container-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+  background-color: #a5dfdc;
+  -webkit-box-shadow: 0px 9px 5px -4px #d1d1d1;
+          box-shadow: 0px 9px 5px -4px #d1d1d1;
+  width: 100vw;
+  height: 60px;
+  padding: 1em;
+  margin-bottom: 15px;
+}
+
+@media screen and (max-width: 550px) {
+  .navbar-container-div {
+    width: 100%;
+    height: 80px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    font-family: "Avenir";
+    justify-content: center;
+  }
+}
+
+.navbar-main-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Avenir";
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  background-color: transparent;
+  width: 70%;
+  height: 50px;
+  line-height: 1em;
+}
+
+@media screen and (max-width: 900px) {
+  .navbar-main-div {
+    width: 75%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .navbar-main-div {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .navbar-main-div {
+    width: 90%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    font-family: "Avenir";
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 490px) {
+  .navbar-main-div {
+    width: 70%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    font-family: "Avenir";
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    align-items: center;
+  }
+}
+
+a#link.navbar-links {
+  font-size: 1.3em;
+  text-decoration: none;
+  color: #5d5d5d;
+  -webkit-transition: 0.1s ease-in;
+  transition: 0.1s ease-in;
+}
+
+@media screen and (max-width: 900px) {
+  a#link.navbar-links {
+    font-size: 1.1em;
+  }
+  a#link.navbar-links:hover {
+    color: #3d3d3d;
+    font-weight: bold;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  a#link.navbar-links {
+    font-size: 1em;
+  }
+  a#link.navbar-links:hover {
+    color: #3d3d3d;
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+}
+
+a#link.navbar-links:hover {
+  color: #3d3d3d;
+  font-weight: bold;
 }
 
 body,
