Added button functionality to the tabs and created the Accounts page.

--- a/public/assets/Styles/00.Global/global.scss
+++ b/public/assets/Styles/00.Global/global.scss
@@ -8,6 +8,9 @@
 @import "../SharedComponents/02.Navbar/Navbar.scss";
 @import "../04.Settings/Settings.scss";
 @import "../04.Settings/Profile/Profile.scss";
+@import "../04.Settings/YourAccount/YourAccount.scss";
+@import "../04.Settings/Notifications/Notifications.scss";
+@import "../04.Settings/UserSettings/UserSettings.scss";
 
 body,
 html {
