--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -2318,6 +2318,29 @@
   font-weight: bold;
 }
 
+.tabs-header-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Avenir";
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 100%;
+  padding: 0.5em;
+  font-size: 1.3em;
+}
+
 .settings-outer-container {
   width: 100vw;
   height: 75vh;
@@ -2358,7 +2381,79 @@
   height: 100%;
 }
 
-@media screen and (max-width: 1390px) {
+@media screen and (max-width: 2030px) {
+  .settings-outer-container .settings-main-container {
+    width: 50%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 2000px) {
+  .settings-outer-container .settings-main-container {
+    width: 50%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 1900px) {
+  .settings-outer-container .settings-main-container {
+    width: 65%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 1800px) {
+  .settings-outer-container .settings-main-container {
+    width: 65%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 1700px) {
+  .settings-outer-container .settings-main-container {
+    width: 65%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 1600px) {
+  .settings-outer-container .settings-main-container {
+    width: 60%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 1500px) {
+  .settings-outer-container .settings-main-container {
+    width: 70%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .settings-outer-container .settings-main-container {
+    width: 80%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 1300px) {
   .settings-outer-container .settings-main-container {
     width: 100%;
     -webkit-box-pack: space-evenly;
@@ -2492,7 +2587,7 @@
 }
 
 .settings-outer-container .settings-content-container {
-  border: 1px solid #4f5050;
+  border: 1px solid #a1a3a3;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2536,7 +2631,7 @@
   height: 100%;
 }
 
-.profile-contents {
+.tabs-contents {
   width: 600px;
   height: 100%;
   overflow-x: hidden;
@@ -2544,74 +2639,74 @@
 }
 
 @media screen and (max-width: 900px) {
-  .profile-contents {
+  .tabs-contents {
     width: 500px;
   }
 }
 
 @media screen and (max-width: 800px) {
-  .profile-contents {
+  .tabs-contents {
     width: 450px;
   }
 }
 
 @media screen and (max-width: 700px) {
-  .profile-contents {
+  .tabs-contents {
     width: 410px;
   }
 }
 
 @media screen and (max-width: 680px) {
-  .profile-contents {
+  .tabs-contents {
     width: 380px;
   }
 }
 
 @media screen and (max-width: 650px) {
-  .profile-contents {
+  .tabs-contents {
     width: 340px;
   }
 }
 
 @media screen and (max-width: 600px) {
-  .profile-contents {
+  .tabs-contents {
     width: 310px;
   }
 }
 
 @media screen and (max-width: 565px) {
-  .profile-contents {
+  .tabs-contents {
     width: 300px;
   }
 }
 
 @media screen and (max-width: 500px) {
-  .profile-contents {
+  .tabs-contents {
     width: 290px;
   }
 }
 
 @media screen and (max-width: 400px) {
-  .profile-contents {
+  .tabs-contents {
     width: 250px;
   }
 }
 
-.profile-contents::-webkit-scrollbar {
+.tabs-contents::-webkit-scrollbar {
   width: 4px;
 }
 
-.profile-contents::-webkit-scrollbar-track {
+.tabs-contents::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(231, 225, 225, 0.3);
           box-shadow: inset 0 0 6px rgba(231, 225, 225, 0.3);
 }
 
-.profile-contents::-webkit-scrollbar-thumb {
+.tabs-contents::-webkit-scrollbar-thumb {
   background-color: #36c2bb;
   outline: 1px solid #828e9b;
 }
 
-.profile-contents .profile-header-section {
+.tabs-contents .tabs-header-section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2634,7 +2729,7 @@
   padding: 0.5em;
 }
 
-.profile-contents .profile-header-title {
+.tabs-contents .tabs-header-title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2657,17 +2752,17 @@
   font-size: 1.3em;
 }
 
-.profile-contents .profile-section-cutoff {
+.tabs-contents .tabs-section-cutoff {
   color: #626464;
   width: 95%;
 }
 
-.profile-contents .blurb {
+.tabs-contents .blurb {
   font-size: 0.9em;
   color: #6e7070;
 }
 
-.profile-contents .profile-information-section {
+.tabs-contents .tabs-information-section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2688,25 +2783,25 @@
   width: 100%;
 }
 
-.profile-contents .profile-information-section .section-divider-title {
+.tabs-contents .tabs-information-section .section-divider-title {
   color: #525555;
   margin-left: 2em;
   margin-top: 1em;
 }
 
-.profile-contents .profile-information-section .profile-question-section {
+.tabs-contents .tabs-information-section .tabs-question-section {
   width: 100%;
   padding: 0.9em;
   color: #676969;
 }
 
-.profile-contents .profile-information-section .info-section-question-title {
+.tabs-contents .tabs-information-section .info-section-question-title {
   padding-left: 1em;
   margin-bottom: 6px;
   color: #676969;
 }
 
-.profile-contents .profile-information-section .info-section-inputs {
+.tabs-contents .tabs-information-section .info-section-inputs {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2728,7 +2823,7 @@
 }
 
 @media screen and (max-width: 710px) {
-  .profile-contents .profile-information-section .info-section-inputs {
+  .tabs-contents .tabs-information-section .info-section-inputs {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -2750,7 +2845,7 @@
   }
 }
 
-.profile-contents .profile-information-section .info-section-inputs-mini {
+.tabs-contents .tabs-information-section .info-section-inputs-mini {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2771,16 +2866,16 @@
   margin-right: 1.2em;
 }
 
-.profile-contents .profile-information-section .infor-input-option {
+.tabs-contents .tabs-information-section .infor-input-option {
   margin-right: 7px;
 }
 
-.profile-contents .profile-information-section .info-section-dropdown {
+.tabs-contents .tabs-information-section .info-section-dropdown {
   width: 90%;
   padding: 1em;
 }
 
-.profile-contents .profile-information-section select#education {
+.tabs-contents .tabs-information-section select#education {
   margin-left: 3em;
   width: 87%;
   height: 30px;
@@ -2788,12 +2883,12 @@
 }
 
 @media screen and (max-width: 710px) {
-  .profile-contents .profile-information-section select#education {
+  .tabs-contents .tabs-information-section select#education {
     margin-left: 1em;
   }
 }
 
-.profile-contents .profile-information-section select#income {
+.tabs-contents .tabs-information-section select#income {
   margin-left: 3em;
   width: 87%;
   height: 30px;
@@ -2801,12 +2896,12 @@
 }
 
 @media screen and (max-width: 710px) {
-  .profile-contents .profile-information-section select#income {
+  .tabs-contents .tabs-information-section select#income {
     margin-left: 1em;
   }
 }
 
-.profile-contents .profile-information-section select#residential-status {
+.tabs-contents .tabs-information-section select#residential-status {
   margin-left: 3em;
   width: 87%;
   height: 30px;
@@ -2814,12 +2909,12 @@
 }
 
 @media screen and (max-width: 710px) {
-  .profile-contents .profile-information-section select#residential-status {
+  .tabs-contents .tabs-information-section select#residential-status {
     margin-left: 1em;
   }
 }
 
-.profile-contents .profile-information-section .info-section-household {
+.tabs-contents .tabs-information-section .info-section-household {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2839,18 +2934,118 @@
           justify-content: space-evenly;
 }
 
-.profile-contents .profile-information-section select#adults {
+.tabs-contents .tabs-information-section select#adults {
   margin-left: 1em;
   width: 40%;
   height: 30px;
   color: #676969;
 }
 
-.profile-contents .profile-information-section select#children {
+.tabs-contents .tabs-information-section select#children {
   margin-left: 2em;
   width: 40%;
   height: 30px;
   color: #676969;
+}
+
+.account-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Avenir";
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 95%;
+  height: 150px;
+  margin: 1em;
+  background-color: #cddfdf;
+  color: #5d5e5e;
+}
+
+.account-container .bank-logo {
+  width: 120px;
+  height: 120px;
+  margin-left: 1em;
+}
+
+.account-container .bank-logo > img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  width: 120px;
+  height: 120px;
+}
+
+.account-container .vertical-divider {
+  border: 1px solid #b4b6b6;
+  height: 85%;
+  margin-left: 15px;
+  margin-right: 10px;
+}
+
+.account-container .account-text-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: left;
+      -ms-flex-align: left;
+          align-items: left;
+  width: 95%;
+  height: 100%;
+  padding-top: 1em;
+  padding-right: 1em;
+  line-height: 2em;
+}
+
+.account-container .account-name-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Avenir";
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+}
+
+.account-container .bank-title {
+  width: 100%;
+  text-align: left;
+  font-weight: bold;
 }
 
 body,
