--- a/public/assets/Styles/04.Settings/Profile/Profile.css
+++ b/public/assets/Styles/04.Settings/Profile/Profile.css
@@ -1,4 +1,4 @@
-.profile-contents {
+.tabs-contents {
   width: 600px;
   height: 100%;
   overflow-x: hidden;
@@ -6,74 +6,74 @@
 }
 
 @media screen and (max-width: 900px) {
-  .profile-contents {
+  .tabs-contents {
     width: 500px;
   }
 }
 
 @media screen and (max-width: 800px) {
-  .profile-contents {
+  .tabs-contents {
     width: 450px;
   }
 }
 
 @media screen and (max-width: 700px) {
-  .profile-contents {
+  .tabs-contents {
     width: 410px;
   }
 }
 
 @media screen and (max-width: 680px) {
-  .profile-contents {
+  .tabs-contents {
     width: 380px;
   }
 }
 
 @media screen and (max-width: 650px) {
-  .profile-contents {
+  .tabs-contents {
     width: 340px;
   }
 }
 
 @media screen and (max-width: 600px) {
-  .profile-contents {
+  .tabs-contents {
     width: 310px;
   }
 }
 
 @media screen and (max-width: 565px) {
-  .profile-contents {
+  .tabs-contents {
     width: 300px;
   }
 }
 
 @media screen and (max-width: 500px) {
-  .profile-contents {
+  .tabs-contents {
     width: 290px;
   }
 }
 
 @media screen and (max-width: 400px) {
-  .profile-contents {
+  .tabs-contents {
     width: 250px;
   }
 }
 
-.profile-contents::-webkit-scrollbar {
+.tabs-contents::-webkit-scrollbar {
   width: 4px;
 }
 
-.profile-contents::-webkit-scrollbar-track {
+.tabs-contents::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(231, 225, 225, 0.3);
           box-shadow: inset 0 0 6px rgba(231, 225, 225, 0.3);
 }
 
-.profile-contents::-webkit-scrollbar-thumb {
+.tabs-contents::-webkit-scrollbar-thumb {
   background-color: #36c2bb;
   outline: 1px solid #828e9b;
 }
 
-.profile-contents .profile-header-section {
+.tabs-contents .tabs-header-section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -96,7 +96,7 @@
   padding: 0.5em;
 }
 
-.profile-contents .profile-header-title {
+.tabs-contents .tabs-header-title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -119,17 +119,17 @@
   font-size: 1.3em;
 }
 
-.profile-contents .profile-section-cutoff {
+.tabs-contents .tabs-section-cutoff {
   color: #626464;
   width: 95%;
 }
 
-.profile-contents .blurb {
+.tabs-contents .blurb {
   font-size: 0.9em;
   color: #6e7070;
 }
 
-.profile-contents .profile-information-section {
+.tabs-contents .tabs-information-section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -150,25 +150,25 @@
   width: 100%;
 }
 
-.profile-contents .profile-information-section .section-divider-title {
+.tabs-contents .tabs-information-section .section-divider-title {
   color: #525555;
   margin-left: 2em;
   margin-top: 1em;
 }
 
-.profile-contents .profile-information-section .profile-question-section {
+.tabs-contents .tabs-information-section .tabs-question-section {
   width: 100%;
   padding: 0.9em;
   color: #676969;
 }
 
-.profile-contents .profile-information-section .info-section-question-title {
+.tabs-contents .tabs-information-section .info-section-question-title {
   padding-left: 1em;
   margin-bottom: 6px;
   color: #676969;
 }
 
-.profile-contents .profile-information-section .info-section-inputs {
+.tabs-contents .tabs-information-section .info-section-inputs {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -190,7 +190,7 @@
 }
 
 @media screen and (max-width: 710px) {
-  .profile-contents .profile-information-section .info-section-inputs {
+  .tabs-contents .tabs-information-section .info-section-inputs {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -212,7 +212,7 @@
   }
 }
 
-.profile-contents .profile-information-section .info-section-inputs-mini {
+.tabs-contents .tabs-information-section .info-section-inputs-mini {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -233,16 +233,16 @@
   margin-right: 1.2em;
 }
 
-.profile-contents .profile-information-section .infor-input-option {
+.tabs-contents .tabs-information-section .infor-input-option {
   margin-right: 7px;
 }
 
-.profile-contents .profile-information-section .info-section-dropdown {
+.tabs-contents .tabs-information-section .info-section-dropdown {
   width: 90%;
   padding: 1em;
 }
 
-.profile-contents .profile-information-section select#education {
+.tabs-contents .tabs-information-section select#education {
   margin-left: 3em;
   width: 87%;
   height: 30px;
@@ -250,12 +250,12 @@
 }
 
 @media screen and (max-width: 710px) {
-  .profile-contents .profile-information-section select#education {
+  .tabs-contents .tabs-information-section select#education {
     margin-left: 1em;
   }
 }
 
-.profile-contents .profile-information-section select#income {
+.tabs-contents .tabs-information-section select#income {
   margin-left: 3em;
   width: 87%;
   height: 30px;
@@ -263,12 +263,12 @@
 }
 
 @media screen and (max-width: 710px) {
-  .profile-contents .profile-information-section select#income {
+  .tabs-contents .tabs-information-section select#income {
     margin-left: 1em;
   }
 }
 
-.profile-contents .profile-information-section select#residential-status {
+.tabs-contents .tabs-information-section select#residential-status {
   margin-left: 3em;
   width: 87%;
   height: 30px;
@@ -276,12 +276,12 @@
 }
 
 @media screen and (max-width: 710px) {
-  .profile-contents .profile-information-section select#residential-status {
+  .tabs-contents .tabs-information-section select#residential-status {
     margin-left: 1em;
   }
 }
 
-.profile-contents .profile-information-section .info-section-household {
+.tabs-contents .tabs-information-section .info-section-household {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -301,14 +301,14 @@
           justify-content: space-evenly;
 }
 
-.profile-contents .profile-information-section select#adults {
+.tabs-contents .tabs-information-section select#adults {
   margin-left: 1em;
   width: 40%;
   height: 30px;
   color: #676969;
 }
 
-.profile-contents .profile-information-section select#children {
+.tabs-contents .tabs-information-section select#children {
   margin-left: 2em;
   width: 40%;
   height: 30px;
