--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -2948,6 +2948,31 @@
   color: #676969;
 }
 
+.custom-checkbox {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.custom-checkbox .checkmark {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #919090;
+  display: inline-block;
+  border-radius: 10px;
+  background: #71c7bb url(https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/White_check.svg/1200px-White_check.svg.png) center/1250% no-repeat;
+}
+
+.custom-checkbox input:checked + .checkmark {
+  background-size: 60%;
+}
+
+.custom-checkbox input {
+  display: none;
+}
+
 .account-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3046,6 +3071,204 @@
   width: 100%;
   text-align: left;
   font-weight: bold;
+}
+
+.notification-section {
+  width: 100%;
+  padding: 1em;
+}
+
+.section-divider-title {
+  padding-bottom: 0.5em;
+  font-size: 1em;
+}
+
+.notif-input-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  width: 100%;
+  padding-left: 3em;
+  padding-top: 1em;
+}
+
+.notif-input-container .notif-input-title {
+  color: #555555;
+  margin-bottom: 0.5em;
+}
+
+.notif-input-container input.notif-input {
+  width: 60%;
+  height: 30px;
+}
+
+.notif-input-container input:focus, .notif-input-container textarea:focus, .notif-input-container select:focus {
+  outline-color: #71c7bb;
+  outline-style: solid;
+}
+
+.userSetting-input-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Avenir";
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 100%;
+  padding-left: 3em;
+  padding-top: 0.5em;
+}
+
+@media all and (max-width: 700px) {
+  .userSetting-input-container {
+    padding-left: 2em;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .userSetting-input-container {
+    padding-left: 1.5em;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .userSetting-input-container {
+    padding-left: 1em;
+  }
+}
+
+.userSetting-input-container input.userSetting-input {
+  width: 90%;
+  height: 30px;
+  background-color: #d1d1d1;
+  border: none;
+  padding-left: 10px;
+}
+
+.userSetting-input-container input:focus, .userSetting-input-container textarea:focus, .userSetting-input-container select:focus {
+  outline-color: #71c7bb;
+  outline-style: solid;
+}
+
+.userSetting-delete-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+  justify-content: center;
+  padding: 3em;
+  margin-top: 1em;
+}
+
+.userSetting-delete-container .userSetting-delete-button {
+  width: 50%;
+  height: 30px;
+  background: transparent;
+  border: none;
+  color: #e46a6a;
+  font-size: 1em;
+  -webkit-transition: 0.1s ease-in;
+  transition: 0.1s ease-in;
+}
+
+.userSetting-delete-container .userSetting-delete-button:hover {
+  color: white;
+  background-color: #EC314A;
+  font-weight: bold;
+}
+
+@media all and (max-width: 700px) {
+  .userSetting-delete-container .userSetting-delete-button {
+    width: 60%;
+    font-size: 1.2em;
+    margin-bottom: 1em;
+  }
+}
+
+@media all and (max-width: 620px) {
+  .userSetting-delete-container .userSetting-delete-button {
+    width: 80%;
+    font-size: 1.2em;
+    margin-bottom: 1em;
+  }
+}
+
+@media all and (max-width: 550px) {
+  .userSetting-delete-container .userSetting-delete-button {
+    width: 90%;
+    font-size: 1.2em;
+    margin-bottom: 1em;
+  }
+}
+
+.userSetting-delete-container .delete-warning-text {
+  padding: 1em;
+  width: 80%;
+}
+
+@media all and (max-width: 700px) {
+  .userSetting-delete-container .delete-warning-text {
+    width: 90%;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .userSetting-delete-container .delete-warning-text {
+    width: 95%;
+  }
+}
+
+.userSetting-delete-container .delete-warning-text .warning-text {
+  line-height: 1em;
+  color: #757575;
+  text-align: center;
+}
+
+@media all and (max-width: 700px) {
+  .userSetting-delete-container .delete-warning-text .warning-text {
+    line-height: 1.4em;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .userSetting-delete-container .delete-warning-text .warning-text {
+    text-align: left;
+  }
 }
 
 body,
