--- a/public/assets/Styles/04.Settings/Profile/Profile.scss
+++ b/public/assets/Styles/04.Settings/Profile/Profile.scss
@@ -189,3 +189,32 @@
 
 
 }
+
+
+// -------------check box styling ---- //
+.custom-checkbox {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+
+.custom-checkbox .checkmark {
+  width: 100%;
+  height: 100%;
+  border: 1px solid rgb(145, 144, 144);
+  display: inline-block;
+  border-radius: 10px;
+  background: rgb(113, 199, 187)
+  url(https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/White_check.svg/1200px-White_check.svg.png) center/1250% no-repeat;
+}
+
+.custom-checkbox input:checked + .checkmark {
+  background-size: 60%;
+}
+
+.custom-checkbox input {
+  display: none;
+}
+
+
