--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -3117,7 +3117,9 @@
   height: 30px;
 }
 
-.notif-input-container input:focus, .notif-input-container textarea:focus, .notif-input-container select:focus {
+.notif-input-container input:focus,
+.notif-input-container textarea:focus,
+.notif-input-container select:focus {
   outline-color: #71c7bb;
   outline-style: solid;
 }
@@ -3165,7 +3167,9 @@
   padding-left: 10px;
 }
 
-.userSetting-input-container input:focus, .userSetting-input-container textarea:focus, .userSetting-input-container select:focus {
+.userSetting-input-container input:focus,
+.userSetting-input-container textarea:focus,
+.userSetting-input-container select:focus {
   outline-color: #71c7bb;
   outline-style: solid;
 }
@@ -3203,7 +3207,7 @@
 
 .userSetting-delete-container .userSetting-delete-button:hover {
   color: white;
-  background-color: #EC314A;
+  background-color: #ec314a;
   font-weight: bold;
 }
 
@@ -3263,6 +3267,284 @@
 @media all and (max-width: 500px) {
   .userSetting-delete-container .delete-warning-text .warning-text {
     text-align: left;
+  }
+}
+
+.bb-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 100vw;
+  margin: 60px 0 30px;
+}
+
+.bb-mid-div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 1500px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+@media screen and (max-width: 1600px) {
+  .bb-mid-div {
+    width: 95%;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .bb-mid-div {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.bb-left {
+  width: 55%;
+  height: 100%;
+}
+
+@media screen and (max-width: 1000px) {
+  .bb-left {
+    width: 90%;
+  }
+}
+
+.bb-left .bb-tabs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 100%;
+}
+
+.bb-left .bb-tabs .bb-tab {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 80px;
+  padding: 10px;
+  border: 1px solid black;
+  cursor: pointer;
+}
+
+.bb-left .bb-tabs .bb-tab:hover {
+  background-color: #c9c9c9;
+}
+
+.bb-left .bb-tabs .bb-active-tab {
+  font-weight: bold;
+  background-color: #bababa;
+}
+
+.bb-left .bb-tabs .bb-active-tab:hover {
+  background-color: #bababa;
+}
+
+.bb-left .bb-budget-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 100%;
+  border: 0.5px solid black;
+  padding: 20px;
+}
+
+.bb-left .bb-budget-box .bb-budget-top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #9d9d9d;
+}
+
+.bb-left .bb-budget-box .bb-budget-top .bb-budget-top-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.bb-left .bb-budget-box .bb-budget-top .bb-budget-top-left .bb-income {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.bb-left .bb-budget-box .bb-budget-top .bb-budget-top-left .bb-sort {
+  width: 100%;
+  height: 30px;
+  margin-bottom: 20px;
+}
+
+.bb-left .bb-budget-box .bb-budget-top .bb-budget-top-right {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+
+.bb-left .bb-budget-box .bb-budget-bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+}
+
+.bb-left .bb-budget-box .bb-budget-bottom .bb-budget-bottom-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 95%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.bb-left .bb-budget-box .bb-budget-bottom .bb-budget-bottom-row .bb-budget-category {
+  font-size: 24px;
+}
+
+.bb-left .bb-budget-box .bb-budget-bottom .bb-budget-bottom-row .bb-budget-dollars {
+  font-size: 24px;
+}
+
+.bb-right {
+  position: relative;
+  width: 44%;
+  height: 100%;
+  border: 3px solid red;
+}
+
+.bb-right .bb-chart {
+  width: 100%;
+  height: 600px;
+  border-radius: 100%;
+  border: 3px solid black;
+}
+
+.bb-right .bb-chart-type {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+@media screen and (max-width: 1000px) {
+  .bb-right {
+    width: 90%;
   }
 }
 
