--- a/public/assets/Styles/00.Global/global.scss
+++ b/public/assets/Styles/00.Global/global.scss
@@ -11,6 +11,7 @@
 @import "../04.Settings/YourAccount/YourAccount.scss";
 @import "../04.Settings/Notifications/Notifications.scss";
 @import "../04.Settings/UserSettings/UserSettings.scss";
+@import "../07.BudgetBreakdown/BudgetBreakdown.scss";
 
 body,
 html {
