--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -1018,6 +1018,15 @@
   background-color: white;
 }
 
+@media screen and (max-width: 3800px) {
+  .additional-info-container {
+    padding-top: 5em;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .additional-info-container {
     -webkit-box-pack: start;
@@ -2448,6 +2457,51 @@
       justify-content: space-around;
   width: 65%;
   height: 100%;
+}
+
+@media screen and (max-width: 3300px) {
+  .settings-outer-container .settings-main-container {
+    width: 32%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 3200px) {
+  .settings-outer-container .settings-main-container {
+    width: 33%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 3000px) {
+  .settings-outer-container .settings-main-container {
+    width: 35%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 2800px) {
+  .settings-outer-container .settings-main-container {
+    width: 40%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 2500px) {
+  .settings-outer-container .settings-main-container {
+    width: 45%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
 }
 
 @media screen and (max-width: 2030px) {
