--- a/public/assets/Styles/02.Signup/additional-info/additionalInfo.css
+++ b/public/assets/Styles/02.Signup/additional-info/additionalInfo.css
@@ -22,6 +22,15 @@
   background-color: white;
 }
 
+@media screen and (max-width: 3800px) {
+  .additional-info-container {
+    padding-top: 5em;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .additional-info-container {
     -webkit-box-pack: start;
