--- a/public/assets/Styles/02.Signup/additional-info/additionalInfo.scss
+++ b/public/assets/Styles/02.Signup/additional-info/additionalInfo.scss
@@ -15,6 +15,10 @@ $phone: 450px;
   width: 100%;
   height: 100vh;
   background-color: white;
+  @media screen and (max-width: 3800px) {
+    padding-top: 5em;
+    justify-content: flex-start;
+  }
   @media screen and (max-width: 600px) {
     justify-content: flex-start;
     background-color: #d1e0de;
