--- a/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.css
+++ b/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.css
@@ -12,8 +12,12 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   width: 100vw;
-  margin: 60px 0 30px;
+  height: 65vh;
+  margin: 100px 0 30px;
   font-family: "Avenir";
 }
 
@@ -84,6 +88,8 @@
       -ms-flex-pack: start;
           justify-content: flex-start;
   width: 100%;
+  position: relative;
+  top: -1px;
 }
 
 .bb-left .bb-tabs .bb-tab {
@@ -103,9 +109,14 @@
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  width: 80px;
+  width: 90px;
   padding: 10px;
-  border: 1px solid black;
+  border: none;
+  -webkit-box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+          box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  outline: none;
   cursor: pointer;
 }
 
@@ -115,11 +126,11 @@
 
 .bb-left .bb-tabs .bb-active-tab {
   font-weight: bold;
-  background-color: #bababa;
+  background-color: #80e3dc;
 }
 
 .bb-left .bb-tabs .bb-active-tab:hover {
-  background-color: #bababa;
+  background-color: #80e3dc;
 }
 
 .bb-left .bb-budget-box {
@@ -140,7 +151,8 @@
       -ms-flex-pack: start;
           justify-content: flex-start;
   width: 100%;
-  border: 0.5px solid black;
+  -webkit-box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+          box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
   padding: 20px;
 }
 
@@ -205,7 +217,7 @@
   cursor: pointer;
 }
 
-.bb-left .bb-budget-box .bb-budget-bottom {
+.bb-left .bb-budget-box .bb-budget-middle {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -222,7 +234,7 @@
   width: 100%;
 }
 
-.bb-left .bb-budget-box .bb-budget-bottom .bb-budget-bottom-row {
+.bb-left .bb-budget-box .bb-budget-middle .bb-budget-middle-row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -240,18 +252,18 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-bottom: 20px;
+  margin-bottom: 12px;
 }
 
-.bb-left .bb-budget-box .bb-budget-bottom .bb-budget-bottom-row .bb-budget-category {
+.bb-left .bb-budget-box .bb-budget-middle .bb-budget-middle-row .bb-budget-category {
   font-size: 24px;
 }
 
-.bb-left .bb-budget-box .bb-budget-bottom .bb-budget-bottom-row .bb-budget-dollars {
+.bb-left .bb-budget-box .bb-budget-middle .bb-budget-middle-row .bb-budget-dollars {
   font-size: 24px;
 }
 
-.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body {
+.bb-left .bb-budget-box .bb-budget-middle .bb-add-body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -269,7 +281,7 @@
   min-height: 500px;
 }
 
-.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-add-input-group {
+.bb-left .bb-budget-box .bb-budget-middle .bb-add-body .bb-add-input-group {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -289,11 +301,11 @@
   margin: 0 20px 20px 0;
 }
 
-.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-input-title {
+.bb-left .bb-budget-box .bb-budget-middle .bb-add-body .bb-input-title {
   font-size: 20px;
 }
 
-.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-input-box {
+.bb-left .bb-budget-box .bb-budget-middle .bb-add-body .bb-input-box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -309,17 +321,17 @@
   font-family: sans-serif;
 }
 
-.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-input-box:focus-within {
+.bb-left .bb-budget-box .bb-budget-middle .bb-add-body .bb-input-box:focus-within {
   border-color: #777;
 }
 
-.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-prefix {
+.bb-left .bb-budget-box .bb-budget-middle .bb-add-body .bb-prefix {
   font-weight: 300;
   font-size: 20px;
   color: #999;
 }
 
-.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-input-field {
+.bb-left .bb-budget-box .bb-budget-middle .bb-add-body .bb-input-field {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
@@ -330,11 +342,11 @@
   padding: 0.5rem;
 }
 
-.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-add-custom {
+.bb-left .bb-budget-box .bb-budget-middle .bb-add-body .bb-add-custom {
   margin-top: 10px;
 }
 
-.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-add-custom .bb-add-custom-row {
+.bb-left .bb-budget-box .bb-budget-middle .bb-add-body .bb-add-custom .bb-add-custom-row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -347,14 +359,14 @@
           align-items: center;
 }
 
-.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-add-custom .bb-add-custom-row .bb-delete-custom-btn {
+.bb-left .bb-budget-box .bb-budget-middle .bb-add-body .bb-add-custom .bb-add-custom-row .bb-delete-custom-btn {
   position: relative;
   top: 3px;
   padding: 11px;
   outline: none;
 }
 
-.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-buttons-div {
+.bb-left .bb-budget-box .bb-budget-middle .bb-add-body .bb-buttons-div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -364,31 +376,80 @@
           flex-direction: row;
 }
 
-.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-buttons-div .bb-add-custom-btn {
+.bb-left .bb-budget-box .bb-budget-middle .bb-add-body .bb-buttons-div .bb-add-custom-btn {
   cursor: pointer;
   margin-right: 20px;
   font-size: 18px;
   padding: 5px;
 }
 
-.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-buttons-div .bb-submit-custom-btn {
+.bb-left .bb-budget-box .bb-budget-middle .bb-add-body .bb-buttons-div .bb-submit-custom-btn {
   cursor: pointer;
   font-size: 18px;
   padding: 5px;
+}
+
+.bb-left .bb-budget-box .bb-budget-bottom {
+  width: 95%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-size: 24px;
+  padding-top: 10px;
+  border-top: 1px solid #9d9d9d;
+}
+
+.bb-left .bb-budget-box .bb-budget-bottom .bb-budget-total {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.bb-left .bb-budget-box .bb-budget-bottom .bb-budget-difference {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.bb-left .bb-budget-box .bb-budget-bottom .bb-budget-total-title {
+  font-weight: bold;
 }
 
 .bb-right {
   position: relative;
   width: 44%;
   height: 100%;
-  border: 3px solid red;
 }
 
 .bb-right .bb-chart {
   width: 100%;
   height: 600px;
   border-radius: 100%;
-  border: 3px solid black;
+}
+
+.bb-right .bb-pie-chart {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .bb-right .bb-chart-type {
