--- a/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.scss
+++ b/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.scss
@@ -7,8 +7,10 @@
 
 .bb-container {
   @include center(row);
+  align-items: flex-start;
   width: 100vw;
-  margin: 60px 0 30px;
+  height: 65vh;
+  margin: 100px 0 30px;
   font-family: "Avenir";
 }
 
@@ -28,7 +30,6 @@
 .bb-left {
   width: 55%;
   height: 100%;
-  // border: 3px solid red;
   @media screen and (max-width: 1000px) {
     width: 90%;
   }
@@ -36,14 +37,19 @@
     @include center(row);
     justify-content: flex-start;
     width: 100%;
-    // border: 3px solid red;
+    position: relative;
+    top: -1px;
+
     .bb-tab {
       @include center(row);
       justify-content: flex-start;
-      width: 80px;
+      width: 90px;
       padding: 10px;
-      // border: 3px solid red;
-      border: 1px solid black;
+      border: none;
+      box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+      border-top-left-radius: 15px;
+      border-top-right-radius: 15px;
+      outline: none;
       cursor: pointer;
       &:hover {
         background-color: rgb(201, 201, 201);
@@ -51,9 +57,9 @@
     }
     .bb-active-tab {
       font-weight: bold;
-      background-color: rgb(186, 186, 186);
+      background-color: #80e3dc;
       &:hover {
-        background-color: rgb(186, 186, 186);
+        background-color: #80e3dc;
       }
     }
   }
@@ -61,20 +67,20 @@
     @include center(column);
     justify-content: flex-start;
     width: 100%;
-    border: 0.5px solid black;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
     padding: 20px;
     .bb-budget-top {
       @include center(row);
       align-items: flex-start;
       justify-content: space-between;
-      // border: 3px solid red;
+
       width: 100%;
       margin-bottom: 20px;
       border-bottom: 1px solid rgb(157, 157, 157);
       .bb-budget-top-left {
         @include center(column);
         align-items: flex-start;
-        // border: 3px solid red;
+
         .bb-income {
           font-size: 20px;
           margin-bottom: 10px;
@@ -89,19 +95,18 @@
         width: 30px;
         height: 30px;
         cursor: pointer;
-        // border: 3px solid red;
       }
     }
-    .bb-budget-bottom {
+    .bb-budget-middle {
       @include center(column);
       width: 100%;
-      // border: 3px solid red;
-      .bb-budget-bottom-row {
+
+      .bb-budget-middle-row {
         @include center(row);
         width: 95%;
         justify-content: space-between;
-        margin-bottom: 20px;
-        // border: 3px solid red;
+        margin-bottom: 12px;
+
         .bb-budget-category {
           font-size: 24px;
         }
@@ -182,6 +187,27 @@
         }
       }
     }
+    .bb-budget-bottom {
+      width: 95%;
+      display: flex;
+      flex-direction: column;
+      font-size: 24px;
+      padding-top: 10px;
+      border-top: 1px solid rgb(157, 157, 157);
+      .bb-budget-total {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+      }
+      .bb-budget-difference {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+      }
+      .bb-budget-total-title {
+        font-weight: bold;
+      }
+    }
   }
 }
 
@@ -189,12 +215,15 @@
   position: relative;
   width: 44%;
   height: 100%;
-  border: 3px solid red;
   .bb-chart {
     width: 100%;
     height: 600px;
     border-radius: 100%;
-    border: 3px solid black;
+  }
+  .bb-pie-chart {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
   }
   .bb-chart-type {
     position: absolute;
