--- a/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.scss
+++ b/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.scss
@@ -178,11 +178,17 @@
             margin-right: 20px;
             font-size: 18px;
             padding: 5px;
+            border-radius: 5px;
+            border: none;
+            box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
           }
           .bb-submit-custom-btn {
             cursor: pointer;
             font-size: 18px;
             padding: 5px;
+            border-radius: 5px;
+            border: none;
+            box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
           }
         }
       }
