Changed styling for better mobile compatibility

--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -3288,9 +3288,14 @@
       -ms-flex-align: start;
           align-items: flex-start;
   width: 100vw;
-  height: 65vh;
   margin: 100px 0 30px;
   font-family: "Avenir";
+}
+
+@media screen and (max-width: 1000px) {
+  .bb-container {
+    margin-top: 30px;
+  }
 }
 
 .bb-mid-div {
@@ -3338,7 +3343,8 @@
 
 @media screen and (max-width: 1000px) {
   .bb-left {
-    width: 90%;
+    width: 100%;
+    margin-bottom: 20px;
   }
 }
 
@@ -3740,7 +3746,7 @@
 
 @media screen and (max-width: 1000px) {
   .bb-right {
-    width: 90%;
+    width: 100%;
   }
 }
 
